fixed some styling

--- a/portfolio-contact.html
+++ b/portfolio-contact.html
@@ -84,7 +84,7 @@
                 <form>
                     <div class="col-10 mx-auto bg-primary formy spacer" >
                         <div class ="form-group col-8 mx-auto">
-                            <h1>
+                            <h1 class ="text-white">
                                 Contact Us
                             </h1>
                         </div>
