--- a/portfolio-menu.html
+++ b/portfolio-menu.html
@@ -86,7 +86,7 @@
                     <div class="col-6 mx-auto">
                         <div class="card">
                             <div class="card-header bg-primary">
-                               <i>Sandwiches</i>
+                               <h3 class="text-white">Sandwiches</h3>
                             </div>
                             <img class="card-img-top" src="sandwich.jpeg" alt="Card image cap">
                             <div class="card-body pdiv1">
@@ -98,7 +98,7 @@
                     <div class="col-6 mx-auto">
                         <div class="card">
                             <div class="card-header bg-primary">
-                                <i>Soda</i>
+                                <h3 class="text-white">Soda</h3>
                             </div>
                             <img class="card-img-top" src="soda.jpeg" alt="Card image cap">
                             <div class="card-body pdiv1">
@@ -113,7 +113,7 @@
                     <div class="col-6 mx-auto">
                         <div class="card">
                             <div class="card-header bg-primary">
-                                <i>Candy</i>
+                                <h3 class="text-white">Candy</h3>
                             </div>
                             <img class="card-img-top" src="candy.jpeg" alt="Card image cap">
                             <div class="card-body pdiv1">
@@ -125,7 +125,7 @@
                     <div class="col-6 mx-auto">
                         <div class="card">
                             <div class="card-header bg-primary">
-                                <i>Hookah</i>
+                                <h3 class="text-white">Hookah</h3>
                             </div>
                             <img class="card-img-top" src="hookah.jpeg" alt="Card image cap">
                             <div class="card-body pdiv1">
